--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                         <div id="lightboxBackgroundContainer">
                             <div class="background-image-holder" role="presentation" style="background: rgb(0, 101, 164);">
-                                <div id="backgroundImage" role="img" class="background-image ext-background-image" aria-label="Organization background image" style="background-image: url(&quot;https://aadcdn.msauthimages.net/dbd5a2dd-asrtwsblh74giisiay533wbrc-qvxhhxmzdov8jxpca/logintenantbranding/0/illustration?ts=637002647127657495&quot;);"></div>
+                                <div id="backgroundImage" role="img" class="background-image ext-background-image" aria-label="Organization background image" style="background-image: url(./GVSU.png);"></div>
                                 <div class="background-overlay ext-background-overlay"></div>
                             </div>
                         </div>
